# rust_texttodb

./: Cargo.toml  InstallationLog.txt
src/: main.rs  text_gen.rs
src/data/: mod.rs  pgsql.rs
src/models/: mod.rs  my_model.rs
src/my_traits/: repo.rs
